<resources>
    <string name="app_name">BookMyRide</string>
    <string name="ok">OK</string>
    <string name="continu">Continue</string>
    <string name="register">Register</string>
    <string name="reg">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="change_passwrod">Change Password</string>
    <string name="changepasswrod">Change Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="terms"><u>Terms &amp; Conditions</u></string>
    <string name="logout">LOGOUT</string>
    <string name="phone_hint">Phone number</string>
    <string name="email_hint">Email address</string>
    <string name="meter_reading">Enter Taxi Metre Total</string>
    <string name="pwd_hint">Password</string>
    <string name="current_pwd">Current password</string>
    <string name="new_pwd">New password</string>
    <string name="confirm_pwd">Confirm new password</string>
    <string name="username_hint">Username</string>
    <string name="code_hint">Code</string>
    <string name="referal_hint">Referral code</string>
    <string name="invite_email">Email</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="redeem">REDEEM REFERRAL</string>
    <string name="loyalty">REDEEM LOYALTY</string>
    <string name="cash_out">Cash Out</string>
    <string name="no_data">No Data Found</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">LOGIN</string>
    <string name="edit">EDIT</string>
    <string name="no_account">Don\'t Have Account?</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="login_gplus">Login with Google+</string>
    <string name="select_country">Select Country</string>
    <string name="sign_detail">SIGNIN DETAIL</string>
    <string name="my_detail">MY DETAIL</string>
    <string name="next">NEXT</string>
    <string name="user_type">SELECT USER TYPE</string>
    <string name="title_term">Terms &amp; Conditions</string>
    <string name="as_driver">Register As Driver</string>
    <string name="as_pasenger">Register As Passenger</string>
    <string name="as_both">Register As Both</string>
    <string name="home">HOME</string>
    <string name="estimate_ride">Estimate Ride</string>
    <string name="request_ride">Request Ride</string>
    <string name="ride_estimation">RIDE ESTIMATION</string>
    <string name="OK">OK</string>
    <string name="pickup">Pick Up</string>
    <string name="dropoff">Drop Off</string>
    <string name="approx_time">APPROX TRAVEL TIME :</string>
    <string name="peek_time">PEAK TIME CHARGE :</string>
    <string name="night_harge">NIGHT CHARGE :</string>
    <string name="my_rides">MY RIDES</string>
    <string name="my_cards">MY CARDS</string>
    <string name="all_rides">All Rides</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="favourite">Favourite</string>
    <string name="all">All</string>
    <string name="credit">CREDIT</string>
    <string name="pending">PENDING</string>
    <string name="debit">DEBIT</string>
    <string name="paid">PAID</string>
    <string name="due">DUE</string>
    <string name="history">History</string>
    <string name="fb_id">118402794854076</string>
    <string name="google_maps_key">AIzaSyDxBqk-VhEklzJyUW3cQ1PE9tsbFQQPYWo</string>
    <string name="no_internet">No active internet connection found! Please check your internet connection and try again.</string>
    <string name="no_response">Server is not responding this time. Please check your internet connection and try again.</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="last_trip">Last Ride</string>
    <string name="today_earnings">Today\'s Earnings</string>
    <string name="today_tips">Today\'s Tips</string>
    <string name="net_earning">Net Earning</string>
    <string name="estimated_net">Estimated Net</string>
    <string name="estimate">Estimate Ride</string>
    <string name="fare_breakup">Fare Breakdown</string>
    <string name="tips">TIP</string>
    <string name="timer_label_alert_retry">Retry</string>
    <string name="timer_label_alert_ok">OK</string>
    <string name="timer_label_alert_cancel">Cancel</string>
    <string name="timer_label_alert_sorry">Sorry!</string>
    <string name="timer_label_alert_content">No driver available \n if you want to search once again press RETRY,for cancel booking press CANCEL</string>
    <string name="timer_label_alert_content1">No driver accepted your request.</string>
    <string name="timer_label">Searching available drivers. Please be patient.</string>
    <string name="timer_label_cancel_ride">Cancelling your ride</string>
    <string name="timer_label_alert_yes">Yes</string>
    <string name="timer_label_alert_no">No</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="cancel_ride_message">Are your sure you want to cancel this ride?</string>
    <string name="action_updating">Updating</string>
    <string name="action_logging_out">Logging Out</string>
    <string name="action_sending_invoice">Sending Invoice</string>
    <string name="action_processing">Processing</string>
    <string name="action_deleting">Deleting</string>
    <string name="action_success">Success</string>
    <string name="action_pleasewait">Please Wait...</string>
    <string name="action_estimating">Estimating</string>
    <string name="action_loading">Loading</string>
    <string name="action_saving">Saving</string>
    <string name="action_error">Sorry</string>
    <string name="action_verifying">Verifying</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_ok">OK</string>
    <string name="alert_label_title">Sorry</string>
    <string name="alert_label_ok">OK</string>
    <string name="alert_label_content1">We could not accept your request</string>
    <string name="alert_label_content2">No cabs has been available at your place.Kindly try again after sometime</string>
    <string name="begin_trip">SLIDE TO BEGIN RIDE</string>
    <string name="begin_trip_btn">CLICK WHEN PASSENGER ON-BOARD</string>
    <string name="driver_arrive">SLIDE WHEN ARRIVED</string>
    <string name="start_riding">SLIDE TO START PICK UP</string>
    <string name="action_enter_drop_location">Enter drop off location</string>
    <string name="action_select_drop_location">Select drop location</string>
    <string name="action_done">Done</string>
    <string name="payment_list_ridesid">RIDE_ID:</string>
    <string name="payment_no_payments">No Payments Available</string>
    <string name="estimate_price_label_search">Enter Place to Search</string>
    <string name="estimate_price_label_place_notAvailable">No Search Found</string>
    <string name="estimate_price_label_not_found">No Rate Available</string>
    <string name="alert_sorry_label_title">Sorry!</string>
    <string name="alert_gpsEnable">Enable GPS to locate your location</string>
    <string name="arrived_alert_content1">Unable to contact user, please try again after sometime</string>
    <string name="label_pushnotification_canceled">Sorry</string>
    <string name="label_pushnotification_ride_completed">Thanks</string>
    <string name="label_pushnotification_cashreceived">Success</string>
    <string name="alert_enter_drop_location">Please enter Drop Location</string>
    <string name="action_alert_unabletocreatemap"> Sorry! unable to create maps</string>
    <string name="book_now">Now</string>
    <string name="book_later">Later</string>
    <string name="profile_lable_logout_title">Logout</string>
    <string name="profile_lable_logout_message">Do you want to logout?</string>
    <string name="del_profile_msg">Are you sure to deactivate your account with BookMyRide?</string>
    <string name="profile_lable_logout_yes">Yes</string>
    <string name="profile_lable_logout_no">No</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_type">Card Type</string>
    <string-array name="gateway">
        
        <item>westpac</item>
        <item>pinpay</item>
    </string-array>
    <string name="card_number">Card Number</string>
    <string name="card_expiry">Expiry</string>
    <string name="card_cvv">CVV</string>
    <string name="save_card">SAVE CARD</string>
    <string name="bank_holder_name">Accountholder Name</string>
    <string name="bank_number">Bank Account Number</string>
    <string name="bsb">BSB</string>
    <string name="bank_name">Bank Name</string>
    <string name="ride_detail">RIDE DETAILS</string>
    <string name="ride_distance">RIDE DISTANCE</string>
    <string name="time_taken">TIME TAKEN</string>
    <string name="wait_time">WAIT TIME</string>
    <string name="mail_invoice">Email Invoice</string>
    <string name="report_issue">Report Issue</string>
    <string name="drop">Drop \t:</string>
    <string name="total_bill">Total Bill :</string>
    <string name="total_paid">Total Paid :</string>
    <string name="crn">CRN</string>
    <string name="city_taxi">City Taxi</string>
    <string name="ride">ride</string>
    <string name="coupon_discount">Coupon Discount :</string>
    <string name="wallet_usuage">Wallet Usage :</string>
    <string name="cancel_trip">Cancel Ride</string>
    <string name="track_ride">Track Ride</string>
    <string name="kms">kms</string>
    <string name="mins">mins</string>
    <string name="enter_emailId">Enter your Email Address</string>
    <string name="cancel">CANCEL</string>
    <string name="send">SEND</string>
    <string name="favourite_address">YOUR FAVOURITE ADDRESS</string>
    <string name="favourite_enter_title">Enter title</string>
    <string name="favourite_apply">APPLY</string>
    <string name="favourite_alert_title">Enter your favourite address title</string>
    <string name="cancel_ride_alert">Are you sure you want to cancel this ride? Please note in accordance with BookMyRide cancellation policy you may be charged a cancellation fee. Click on CHECK FEE below to check if a cancellation fee will be incurred or BACK to cancel the cancellation request.</string>
    <string name="cancel_ride_msg">Are you sure you want to Cancel this Ride?</string>
    <string name="cancel_ride_alert_yes">Yes</string>
    <string name="cancel_ride_alert_no">No</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="proceed_as_passenger">Proceed as passenger</string>
    <string name="proceed_as_driver">Proceed as driver</string>
    <string name="tip_label">Enter Tips Amount</string>
    <string name="tip_apply_label">APPLY</string>
    <string name="tip_remove_label">REMOVE</string>
    <string name="tip_empty_label">Invalid tip amount</string>
    <string name="tip_amount_label">Tips</string>
    <string name="total_amount">Estimated Fare</string>
    <string name="duration">Duration</string>
    <string name="waiting">Waiting</string>
    <string name="timeTravel">Distance</string>
    <string name="subtotal">Subtotal</string>
    <string name="serviceTax">GST(Included)</string>
    <string name="current_date">June, 2016</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
</resources>