<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lay_top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/title_color">

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="onBack"
            android:src="@drawable/back_arrow" />

        <com.bookmyride.views.BoldTextView
            android:id="@+id/signin_header_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/change_passwrod"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/lay_top"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lock_change_password" />

        <com.bookmyride.views.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Please complete the following fields"
            android:textColor="@color/reg_colors"
            android:textSize="@dimen/input_size" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.bookmyride.views.RegularEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bg_forgot"
                android:hint="@string/current_pwd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/input_size" />

            <com.bookmyride.views.RegularEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg_forgot"
                android:hint="@string/new_pwd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/input_size" />

            <com.bookmyride.views.RegularEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg_forgot"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/input_size" />

            <com.bookmyride.views.RegularTextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_red"
                android:clickable="true"
                android:gravity="center"
                android:onClick="changePassword"
                android:padding="@dimen/input_size"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/input_size" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>