<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.bookmyride.views.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/all"
                android:textColor="@android:color/black"
                android:textSize="@dimen/index_text_size" />

            <TextView
                android:id="@+id/a_view"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/driver_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.bookmyride.views.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/credit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/index_text_size" />

            <TextView
                android:id="@+id/c_view"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.bookmyride.views.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/pending"
                android:textColor="@android:color/black"
                android:textSize="@dimen/index_text_size" />

            <TextView
                android:id="@+id/p_view"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/rides_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <com.bookmyride.views.RegularTextView
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="No Data Found"
            android:textColor="@color/black"
            android:textSize="@dimen/input_size"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>